All-in-one dockerfile